Added changes for build task

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
+    <header>
+        <h1>Naveen Palaniswamy</h1>
+        <h2>Software developer</h2>
+        <div class="tagline">
+            <h3>About me</h3>
+            <div>I'm a web application developer building feature rich applications using the Adobe Experience Manager product suite.</div>
+        </div>
+    </header>
+    
+    <main>
+        <section class="skills">
+           <h3>Skills that I'm experienced with</h3>
+            <ul>
+                <li>Java / J2EE</li>
+                <li>HTML</li>
+                <li>Javascript</li>
+            </ul>
+        </section>
+        <section class="contact">
+            <h3>Contact me</h3>
+            <p>You can contact me anytime on <a href="https://twitter.com/pnaveen88">@pnaveen88</a></p>
+        </section>
+    </main>
 
 </body>
 </html>
