Updated index file

--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,20 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>Naveen Palaniswamy</h1>
         <h2>Software developer</h2>
-        <div class="tagline">
-            <h3>About me</h3>
-            <div>I'm a web application developer building feature rich applications using the Adobe Experience Manager product suite.</div>
-        </div>
+        
     </header>
     
     <main>
+        <section class="tagline">
+            <h3>About me</h3>
+            <p>I'm a web application developer building feature rich applications using the Adobe Experience Manager product suite.</p>
+        </section>
         <section class="skills">
-           <h3>Skills that I'm experienced with</h3>
+           <h3>My skills,</h3>
+           <p>Skills that I'm experienced with</p>
             <ul>
                 <li>Java / J2EE</li>
                 <li>HTML</li>
